package Strategie.Rabais;

public interface IStrategyRabais {
  public Double getCost(Vente vente);
}
